# langbai-TTS-Studio

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  design-qa.md  package-lock.json  package.json
backend/: .env.example  .gitignore  API.md  README.md  engine_runtime.py  engine_worker.py  gpt_workbench_worker.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  training_worker.py
backend/app/: __init__.py  audio.py  bindings.py  community_models.py  diagnostics.py  jobs.py  library.py  main.py  model_scanner.py  models.py  parameters.py  segmenter.py  storage.py  training.py  voices.py  workspace.py
backend/app/adapters/: __init__.py  base.py  mock.py  subprocess_adapter.py
backend/app/installer/: __init__.py  catalog.py  integrity.py  manager.py  models.py  runner.py  storage.py  supply.py
backend/tests/: test_api.py  test_bindings.py  test_community_models.py  test_installer.py  test_installer_supply.py  test_jobs.py  test_managed_adapters.py  test_model_scanner.py  test_segmenter.py  test_subprocess_environment.py  test_training.py  test_unlimited_long_audio.py  test_voice_profiles.py  test_workspace_api.py
docs/: ACCEPTANCE_PLAN.md  COMMERCIAL_ACCEPTANCE_MATRIX.md  COMMERCIAL_READINESS_AUDIT.md  ENGINE_INTEGRATION_BASELINE.md  INSTALLER_ACCEPTANCE_PLAN.md
electron/: main.cjs  preload.cjs
frontend/: AGENTS.md  UI-AUDIT.md  index.html  package-lock.json  package.json  vite.config.mjs
scripts/: build-icons.py  compare_ui.py  setup.ps1  (+1 more)
(+35 files in other folders)
