[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "langbai-tts-studio-backend"
version = "1.0.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.9,<3",
  "numpy>=1.26,<3",
  "soundfile>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "httpx>=0.27,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
